typescript/checker/tests/conformance/es6/templates/templateStringInNewOperatorES6.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            74,
        ),
        hi: BytePos(
            88,
        ),
        ctxt: #0,
    },
    callee: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    74,
                ),
                hi: BytePos(
                    88,
                ),
                ctxt: #0,
            },
            kind: TsStringKeyword,
        },
    ),
}
 --> $DIR/tests/conformance/es6/templates/templateStringInNewOperatorES6.ts:2:13
  |
2 | var x = new `abc${ 1 }def`;
  |             ^^^^^^^^^^^^^^

